[gd_scene load_steps=9 format=2]

[ext_resource path="res://addons/repl/custom-dynamicfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://addons/repl/custom-theme.tres" type="Theme" id=2]
[ext_resource path="res://addons/repl/iosevka-term-ss10-regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://addons/repl/ReplControl.gd" type="Script" id=4]
[ext_resource path="res://addons/repl/REPLEnvironment.gd" type="Script" id=5]
[ext_resource path="res://addons/repl/ui/ReplInputTextEdit.gd" type="Script" id=6]

[sub_resource type="Theme" id=2]
LineEdit/colors/clear_button_color = Color( 0.88, 0.88, 0.88, 1 )
LineEdit/colors/clear_button_color_pressed = Color( 1, 1, 1, 1 )
LineEdit/colors/cursor_color = Color( 0.94, 0.94, 0.94, 1 )
LineEdit/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
LineEdit/colors/font_color_selected = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color_uneditable = Color( 0.88, 0.88, 0.88, 0.5 )
LineEdit/colors/selection_color = Color( 0.49, 0.49, 0.49, 1 )
LineEdit/constants/minimum_spaces = 12
LineEdit/fonts/font = null
LineEdit/icons/clear = null
LineEdit/styles/focus = null
LineEdit/styles/normal = null
LineEdit/styles/read_only = null
TextEdit/colors/background_color = Color( 0, 0, 0, 0 )
TextEdit/colors/bookmark_color = Color( 0.08, 0.49, 0.98, 1 )
TextEdit/colors/brace_mismatch_color = Color( 1, 0.2, 0.2, 1 )
TextEdit/colors/breakpoint_color = Color( 0.8, 0.8, 0.4, 0.2 )
TextEdit/colors/caret_background_color = Color( 0, 0, 0, 1 )
TextEdit/colors/caret_color = Color( 0.88, 0.88, 0.88, 1 )
TextEdit/colors/code_folding_color = Color( 0.8, 0.8, 0.8, 0.8 )
TextEdit/colors/completion_background_color = Color( 0.17, 0.16, 0.2, 1 )
TextEdit/colors/completion_existing_color = Color( 0.87, 0.87, 0.87, 0.13 )
TextEdit/colors/completion_font_color = Color( 0.67, 0.67, 0.67, 1 )
TextEdit/colors/completion_scroll_color = Color( 1, 1, 1, 1 )
TextEdit/colors/completion_selected_color = Color( 0.26, 0.26, 0.27, 1 )
TextEdit/colors/current_line_color = Color( 0.25, 0.25, 0.26, 0.8 )
TextEdit/colors/executing_line_color = Color( 0.2, 0.8, 0.2, 0.4 )
TextEdit/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
TextEdit/colors/font_color_readonly = Color( 0.88, 0.88, 0.88, 0.5 )
TextEdit/colors/font_color_selected = Color( 0, 0, 0, 1 )
TextEdit/colors/function_color = Color( 0.4, 0.64, 0.81, 1 )
TextEdit/colors/line_number_color = Color( 0.67, 0.67, 0.67, 0.4 )
TextEdit/colors/mark_color = Color( 1, 0.4, 0.4, 0.4 )
TextEdit/colors/member_variable_color = Color( 0.9, 0.31, 0.35, 1 )
TextEdit/colors/number_color = Color( 0.92, 0.58, 0.2, 1 )
TextEdit/colors/safe_line_number_color = Color( 0.67, 0.78, 0.67, 0.6 )
TextEdit/colors/selection_color = Color( 0.49, 0.49, 0.49, 1 )
TextEdit/colors/symbol_color = Color( 0.94, 0.94, 0.94, 1 )
TextEdit/colors/word_highlighted_color = Color( 0.8, 0.9, 0.9, 0.15 )
TextEdit/constants/completion_lines = 7
TextEdit/constants/completion_max_width = 50
TextEdit/constants/completion_scroll_width = 3
TextEdit/constants/line_spacing = 4
TextEdit/fonts/font = ExtResource( 1 )
TextEdit/icons/fold = null
TextEdit/icons/folded = null
TextEdit/icons/space = null
TextEdit/icons/tab = null
TextEdit/styles/completion = null
TextEdit/styles/focus = null
TextEdit/styles/normal = null
TextEdit/styles/read_only = null

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 3 )

[node name="REPLControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 200 )
theme = SubResource( 2 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IOVBox" type="VSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="output" type="RichTextLabel" parent="IOVBox"]
margin_right = 1280.0
margin_bottom = 648.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
custom_fonts/mono_font = SubResource( 3 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "Welcome.
Please type a GDScript Expression below and type Enter.
"
text = "Welcome.
Please type a GDScript Expression below and type Enter.
"
scroll_following = true
selection_enabled = true

[node name="InputHBox" type="HBoxContainer" parent="IOVBox"]
margin_top = 660.0
margin_right = 1280.0
margin_bottom = 720.0
grow_vertical = 0
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="input" type="TextEdit" parent="IOVBox/InputHBox"]
margin_right = 1239.0
margin_bottom = 60.0
grow_vertical = 0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 15
custom_fonts/font = SubResource( 3 )
syntax_highlighting = true
highlight_all_occurrences = true
caret_block_mode = true
caret_blink = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="import" type="Button" parent="IOVBox/InputHBox"]
visible = false
margin_left = 1141.0
margin_right = 1239.0
margin_bottom = 51.0
focus_mode = 0
text = "Import scene"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "obsoleted by load() substitution hack"
}

[node name="eval" type="Button" parent="IOVBox/InputHBox"]
margin_left = 1243.0
margin_right = 1280.0
margin_bottom = 60.0
focus_mode = 0
text = "Eval"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="import_filedialog" type="FileDialog" parent="."]
margin_right = 538.0
margin_bottom = 302.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Open a File"
mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReplEnvironment" type="Node" parent="."]
script = ExtResource( 5 )

[connection signal="submit_eval" from="IOVBox/InputHBox/input" to="." method="_on_input_submit_eval"]
[connection signal="text_changed" from="IOVBox/InputHBox/input" to="." method="_on_input_text_changed"]
[connection signal="pressed" from="IOVBox/InputHBox/import" to="." method="_on_import_pressed"]
[connection signal="pressed" from="IOVBox/InputHBox/eval" to="." method="_on_eval_pressed"]
[connection signal="file_selected" from="import_filedialog" to="." method="_on_import_filedialog_file_selected"]
